# cpp-image-processing

./: .clang-format  .gitignore  CMakeLists.txt  assertions.hpp  box_filters.hpp  canny.cpp  canny.hpp  convolute.hpp  filters.hpp  flatten.hpp  gaussian.cpp  gaussian.hpp  grayscale.cpp  grayscale.hpp  harris.cpp  harris.hpp  image.hpp  image_file_buffer.cpp  image_file_buffer.hpp  image_traverser.hpp  img.hpp  integral_image.hpp  libpng_wrapper.cpp  libpng_wrapper.hpp  main.cpp  mat.hpp  mat_accessor.hpp  mat_main.cpp  mat_view.hpp  mat_view_2d.hpp  matrix.hpp  neighbours.hpp  pixel_traits.hpp  pixels.hpp  sobel.cpp  sobel.hpp  test_flatten.cpp  test_image.cpp  test_image_buffer.cpp  test_image_traverser.cpp  (+4 more)
